--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -12,15 +12,16 @@
     var routedataprevious = new Dictionary<string, string>
 {
         {"positionid", Model.PositionId.ToString()},
+        {"id", Model.Id.ToString() },
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
         {"percentmatch", Model.PercentMatch },
+        {"previouspagesimilar", Model.PreviousPageSimilar },
         {"previouspagedetails", Model.PreviousPageDetails },
-        { "previouspage", Model.PreviousPage}
-
+        {"previouspage", Model.PreviousPage}
 };
 
 }
@@ -63,139 +64,53 @@
                         <td colspan="2">@Localizer["No Certifications"]</td>
                     </tr>
                 }
-                @if (Model.PositionRatings1.Any())
+                @if (Model.PositionCompetencyRatings.Any())
                 {
-                    <tr>
-                        <th style="background-color:#f2f2f2" width="80%">@Localizer["KNOWLEDGE ELEMENTS"]</th>
-                        <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["Level"]</th>
-                    </tr>
-                    @foreach (var c in Model.PositionRatings1)
+                    @foreach (var competencytype in Model.PositionCompetencyRatings)
                     {
-                        var key1 = "a" + c.CompetencyId.ToString();
-                        var key2 = "b" + c.CompetencyId.ToString();
                         <tr>
-                            <td>
-                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                    @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
-                                </a>
-                                <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
-                                    <header class="modal-header">
-                                        <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
-                                    </header>
-                                    <div class="modal-body ">
-                                        <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                    </div>
-                                </section>
-                            </td>
-                            <td class="text-center">
-                                <a href="#@key2" aria-controls="centred-popup" class="wb-lbx">
-                                    <abbr title="Level @c.RatingValue Summary">
-                                        @c.RatingValue
-                                    </abbr>
-                                </a>
-                                <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
-                                    <header class="modal-header">
-                                        <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
-                                    </header>
-                                    <div class="modal-body ">
-                                        <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                        <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
-                                            <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                    </div>
-                                </section>
-                            </td>
+                            <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
+                            <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
                         </tr>
-                    }
-                }
-                @if (Model.PositionRatings2.Any())
-                {
-                    <tr>
-                        <th style="background-color:#f2f2f2" width="80%">@Localizer["TECHNICAL ELEMENTS"]</th>
-                        <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["Level"]</th>
-                    </tr>
-                    @foreach (var c in Model.PositionRatings2)
-                    {
-                        var key1 = "c" + c.CompetencyId.ToString();
-                        var key2 = "d" + c.CompetencyId.ToString();
-                        <tr>
-                            <td>
-                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                    @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
-                                </a>
-                                <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
-                                    <header class="modal-header">
-                                        <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
-                                    </header>
-                                    <div class="modal-body ">
-                                        <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
-                                    </div>
-                                </section>
-                            </td>
-                            <td class="text-center">
-                                <a href="#@key2" aria-controls="centred-popup" class="wb-lbx">
-                                    <abbr title="Level @c.RatingValue Summary">
-                                        @c.RatingValue
-                                    </abbr>
-                                </a>
-                                <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
-                                    <header class="modal-header">
-                                        <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
-                                    </header>
-                                    <div class="modal-body ">
-                                        <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                        <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
+
+                        foreach (var c in competencytype)
+                        {
+                            var key1 = "a" + c.CompetencyId.ToString();
+                            var key2 = "b" + c.CompetencyId.ToString();
+                            <tr>
+                                <td>
+                                    <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
+                                        @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
+                                    </a>
+                                    <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
+                                        <header class="modal-header">
+                                            <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
+                                        </header>
+                                        <div class="modal-body ">
+                                            <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
                                             <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                    </div>
-                                </section>
-                            </td>
-                        </tr>
-                    }
-                }
-                @if (Model.PositionRatings3.Any())
-                {
-                    <tr>
-                        <th style="background-color:#f2f2f2" width="80%">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
-                        <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["Level"]</th>
-                    </tr>
-                    @foreach (var c in Model.PositionRatings3)
-                    {
-                        var key1 = "e" + c.CompetencyId.ToString();
-                        var key2 = "f" + c.CompetencyId.ToString();
-                        <tr>
-                            <td>
-                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                    @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
-                                </a>
-                                <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
-                                    <header class="modal-header">
-                                        <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
-                                    </header>
-                                    <div class="modal-body ">
-                                        <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
-                                    </div>
-                                </section>
-                            </td>
-                            <td class="text-center">
-                                <a href="#@key2" aria-controls="centred-popup" class="wb-lbx">
-                                    <abbr title="Level @c.RatingValue Summary">
-                                        @c.RatingValue
-                                    </abbr>
-                                </a>
-                                <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
-                                    <header class="modal-header">
-                                        <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
-                                    </header>
-                                    <div class="modal-body ">
-                                        <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                        <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
-                                            <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                    </div>
-                                </section>
-                            </td>
-                        </tr>
+                                        </div>
+                                    </section>
+                                </td>
+                                <td class="text-center">
+                                    <a href="#@key2" aria-controls="centred-popup" class="wb-lbx">
+                                        <abbr title="Level @c.RatingValue Summary">
+                                            @c.RatingValue
+                                        </abbr>
+                                    </a>
+                                    <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
+                                        <header class="modal-header">
+                                            <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
+                                        </header>
+                                        <div class="modal-body ">
+                                            <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
+                                            <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
+                                                <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
+                                        </div>
+                                    </section>
+                                </td>
+                            </tr>
+                        }
                     }
                 }
             </tbody>
