--- a/Web/Pages/Candidate/Seagoing/Crew/Logistics/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Logistics/PositionList.cshtml
@@ -17,7 +17,7 @@
         <thead>
             <tr>
                 <th class="bg-primary" width="15%">@Localizer["LEVEL"]</th>
-                <th class="bg-primary" width="75%">@Localizer["POSITIONS"]</th>
+                <th class="bg-primary" width="75%">@Localizer["POSITION"]</th>
                 <th class="bg-primary" width="10%"></th>
             </tr>
         </thead>
